--- a/index.html
+++ b/index.html
@@ -6,8 +6,66 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    }
+    body {
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .progress {
+      height: 40px;
+      border-radius: 40px;
+      background-color: #ebebeb;
+      box-shadow: none;
+      overflow: hidden visible;
+    }
+    .progress-bar {
+      width: 50%;
+      text-align: right;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      border-radius: 40px;
+      padding: 0px 15px;
+      font-size: 2rem;
+      border: 2px solid;
+      color: #6d6d6d;
+      background-image: linear-gradient(315deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+      background-size: 15px 15px;
+      box-shadow: inset 1px 2px 4px rgb(255 255 255 / 80%), 0px 4px 3px -2px rgb(0 0 0 / 40%);
+    }
+    .green {
+      background-color: #aada65;
+      border-color: #97b574;
+    }
+    .red {
+      background-color: #fd9080;
+      border-color: #c78278;
+    }
+    .white {
+      background-color: #fff;
+      border-color: #c6c6c6;
+    }
+    .blue {
+      background-color: #9acef4;
+      border-color: #86afc2;
+    }
+    .yellow {
+      background-color: #fdd15f;
+      border-color: #c8ae65;
+    }
+  </style>
 </head>
 
 <body>
