--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       box-sizing: border-box;
       font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
+
     body {
       width: 100vw;
       height: 100vh;
@@ -22,14 +23,23 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 10%;
     }
+
+    body > div.container {
+      width: 100%;
+      background-color: #fafafa;
+      padding: 10%;
+    }
+
     .progress {
       height: 40px;
       border-radius: 40px;
       background-color: #ebebeb;
       box-shadow: none;
-      overflow: hidden visible;
+      overflow: visible;
     }
+
     .progress-bar {
       width: 50%;
       text-align: right;
@@ -41,29 +51,40 @@
       font-size: 2rem;
       border: 2px solid;
       color: #6d6d6d;
-      background-image: linear-gradient(315deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+      background-image: linear-gradient(315deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
       background-size: 15px 15px;
       box-shadow: inset 1px 2px 4px rgb(255 255 255 / 80%), 0px 4px 3px -2px rgb(0 0 0 / 40%);
     }
+
     .green {
       background-color: #aada65;
       border-color: #97b574;
     }
+
     .red {
       background-color: #fd9080;
       border-color: #c78278;
     }
+
     .white {
       background-color: #fff;
       border-color: #c6c6c6;
     }
+
     .blue {
       background-color: #9acef4;
       border-color: #86afc2;
     }
+
     .yellow {
       background-color: #fdd15f;
       border-color: #c8ae65;
+    }
+
+    @media screen and (max-width: 768px) {
+      .container  {
+        width: 100% !important;
+      }
     }
   </style>
 </head>
